.nx/cache/terminalOutputs/6612750479150190134
> pnpm -C apps/api dev


> api@0.1.0 dev /home/yuri/repos/tcc/apps/api
> tsx watch src/index.ts

/home/yuri/repos/tcc/apps/api/src/llm.ts:2
import { Instructor } from "@instructor-ai/instructor";
         ^
SyntaxError: The requested module '@instructor-ai/instructor' does not provide an export named 'Instructor'
[90m    at #_instantiate (node:internal/modules/esm/module_job:254:21)[39m
[90m    at async ModuleJob.run (node:internal/modules/esm/module_job:369:5)[39m
[90m    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:671:26)[39m
[90m    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)[39m

Node.js v24.11.1
